Bug 1872776 - Avoid multiplying by NaN in draw_perspective. r=gfx-reviewers,ahale

Differential Revision: https://phabricator.services.mozilla.com/D198772